recent pip freeze

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,55 @@
-wagtail==2.2
-Django==2.0
-django-taggit==0.22.2
-django-el-pagination==3.1.0
-Markdown==2.6.2
-Pygments
-wagtailmenus==2.8
-django-widget-tweaks==1.4.2
-django_compressor==2.2
-django-libsass==0.7
-django-environ==0.4.5
-
-# code style
-flake8==3.6.0
-isort==4.3.4
-pycodestyle==2.4.0
+asgiref==3.2.10
 autopep8==1.4.3
+beautifulsoup4==4.8.2
+certifi==2020.6.20
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.0
+django-appconf==1.0.4
+django-cogwheels==0.3
+django-compressor==2.2
+django-el-pagination==3.1.0
+django-environ==0.4.5
+django-heroku==0.3.1
+django-libsass==0.7
+django-modelcluster==4.4.1
+django-taggit==0.22.2
+django-treebeard==4.3.1
+django-widget-tweaks==1.4.2
+djangorestframework==3.11.0
+draftjs-exporter==2.0.0
+flake8==3.6.0
+gunicorn==20.0.4
+html5lib==0.999999999
+idna==2.10
+importlib-metadata==1.7.0
+isort==4.3.4
+l18n==2018.5
+libsass==0.20.0
+Markdown==2.6.2
+mccabe==0.6.1
+nodeenv==1.4.0
+olefile==0.46
+Pillow==4.3.0
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+pycodestyle==2.4.0
+pyflakes==2.0.0
+Pygments==2.6.1
+pytz==2020.1
+rcssmin==1.0.6
+requests==2.24.0
+rjsmin==1.0.12
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+toml==0.10.1
+Unidecode==0.4.21
+urllib3==1.25.9
+wagtail==2.2
+wagtailmenus==2.8
+webencodings==0.5.1
+whitenoise==5.1.0
+Willow==1.1
+XlsxWriter==1.2.9
+zipp==3.1.0
