--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ psycopg2-binary==2.8.5
 pycodestyle==2.4.0
 pyflakes==2.0.0
 Pygments==2.6.1
+python-dotenv==0.14.0
 pytz==2020.1
 rcssmin==1.0.6
 requests==2.24.0
